Fix Add Quesion button positioning on mobile and disable selection of the sidebar
Pun intended.

--- a/client/src/styles/SplitView.less
+++ b/client/src/styles/SplitView.less
@@ -9,6 +9,7 @@ aside.CalendarView {
     overflow-y:scroll;
     overflow-x:hidden;
     -webkit-overflow-scrolling: touch;
+    user-select: none;
 }
 
 section.StudentSessionView {
