--- a/client/src/styles/session/AddQuestion.less
+++ b/client/src/styles/session/AddQuestion.less
@@ -2,6 +2,7 @@
   background-color: white;
   height: 100%;
   color: #484848;
+  position: relative;
 
   .AddQuestion {
     hr {
@@ -139,6 +140,13 @@
         cursor: pointer;
         background-color: #d8d8d8;
         transition: all 0.3s ease;
+
+        @media only screen and (max-width: 800px) {
+            position: fixed;
+            bottom: 26px;
+            right: 26px;
+            margin: 0;
+        }
     }
     .AddButton.active {
         box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.5);
